--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           \end{align}$$
 				</p>
 				<ol>
-					<li class="mb">Derive the base $b$ of the exponential curve</li>
+					<li class="mb">Derive the base $b$ of the exponential function</li>
 					<li>Derive the bucket boundary $f$ for index $i$ and offset $o$</li>
 					<li>Derive the positive bucket boundary $f_P$ for index $i$</li>
 					<li class="mb">
